[package]
name = "amethyst_openvr"
version = "0.1.0"
authors = ["Ellie <hi@ellie.moe>"]

[dependencies]
amethyst = { path = "../amethyst", version = "0.8.0" }
openvr = "0.5"
openvr_sys = "2"
log = "0.4"

[features]
nightly = [
    "amethyst/nightly"
]

[[example]]
name = "openvr_example"
path = "example/main.rs"
