cargo-features = ["profile-overrides"]

[package]
name = "amethyst_openvr"
version = "0.1.0"
authors = ["Ellie <hi@ellie.moe>"]

[dependencies]
amethyst = { path = "../amethyst", version = "0.8.0" }
amethyst_xr_models = { path = "../amethyst_xr_models" }
openvr = "0.5"
openvr_sys = "2"
log = "0.4"

[features]
nightly = [
    "amethyst/nightly"
]

[[example]]
name = "openvr_example"
path = "example/main.rs"

[patch.crates-io]
gfx = { path = "../gfx/src/render" }
gfx_core = { path = "../gfx/src/core"}
gfx_device_gl = { path = "../gfx/src/backend/gl" }
gfx_window_glutin = { path = "../gfx/src/window/glutin" }

[profile.dev.overrides."*"]
opt-level = 3
